--- a/html/09_실습테마변경.html
+++ b/html/09_실습테마변경.html
@@ -11,9 +11,15 @@
         <button onclick="분홍모드()">분홍 모드</button>
         <button onclick="초록모드()">초록 모드</button>
     <script>
+      //자료형 var(오래된 버전) let const (최신 버전)
+      // document = html 문서 안에서 선택하기     body
+      // ID = 변수명을 가지고 올 때는 getElementById("변수명");
+      // querySelector -> 특정한 class나 id가 없을 때 선택하겠다. body 태그를
         const 테마변경 = document.querySelector("body");
+
+        //버튼 기능 만들기
         function 밝은모드(){
-          테마변경.style.color="black";
+          테마변경.style.color="black"; // body 태그 안에 있는 style 에서 글자색(color) 를 검정으로 변경
           테마변경.style.backgroundColor="white";
         }
         function 어두운모드(){
@@ -24,6 +30,11 @@
           테마변경.style.color="lightpink";
           테마변경.style.backgroundColor="lightsteelblue";
         }
+        /* js 는 오타나 철자 문제가 있을 때
+            문제를 보여주며 실행을 멈추는 것이 아니라
+            style로 예를 들자면 기본색상인 검정을 가져오거나
+            그 전에 사용한 색상을 가지고와서 활용
+        */
         function 초록모드(){
           테마변경.style.color="yellowgreen";
           테마변경.style.backgroundColor="lightgreen";
