회원가입 유효성검사

--- a/html/14_요소와폼이름실습.html
+++ b/html/14_요소와폼이름실습.html
@@ -29,18 +29,6 @@
         <p><strong>이름 : </strong> <span id="설문이름"></span> </p>
         <p><strong>설문내용 : </strong> <span id="설문내용결과"></span> </p>
     </div>
-    <script>
-        function 제출하기(){
-            const 이름 = document.getElementById("이름").value;
-            const 설문내용 = document.getElementById("설문내용").value;
-
-            //이름과 설문내용에 작성한 결과를 표시하기
-            document.getElementById("설문이름").textContent = 이름;
-            document.getElementById("설문내용결과").textContent = 설문내용;
-
-            //결과 보이기
-            document.getElementById("설문결과").style.display = "block"
-        }
-    </script>
+    <script src="../js/14_요소와폼이름실습.js"></script>
   </body>
 </html>
