--- a/html/17_메타데이터맛보기.html
+++ b/html/17_메타데이터맛보기.html
@@ -20,14 +20,6 @@
         <h3 id="설명">설명</h3>
     </div>
     <input type="hidden" id="EI" value="0">
-    <script>
-        // JQuery
-        // 메타데이터
-        const 선택지 = {
-            "1번선택" : {"제목" : "문제1번","타입" : "EI", "A" : "E", "B" : "I" },
-            "2번선택" : {"제목" : "문제2번","타입" : "SN", "A" : "S", "B" : "N" },
-            "3번선택" : {"제목" : "문제3번","타입" : "TF", "A" : "T", "B" : "F" }
-        }
-    </script>
+    <script src="../js/17_메타데이터맛보기.js"></script>
   </body>
 </html>
