--- a/html/22_키입력실습.html
+++ b/html/22_키입력실습.html
@@ -14,57 +14,6 @@
             <div class="key">F</div>
         </div>
     </div>
-    <script>
-        const keys = document.querySelectorAll(".key");
-        function 키다운기능(e){
-
-            let 숫자값저장;
-
-            switch(e.key){
-                case 'a' : 숫자값저장 = 0;
-                    break;
-                case 's' : 숫자값저장 = 1;
-                    break;
-                case 'd' : 숫자값저장 = 2;
-                    break;
-                case 'f' : 숫자값저장 = 3;
-                    break;
-                default :
-                    return;
-            }
-            keys[숫자값저장].style.background = "lightblue";
-            keys[숫자값저장].style.color = "lightpink";
-        };
-        document.addEventListener("keydown",키다운기능);
-        document.addEventListener("keyup",키업기능);
-        
-        //키 다운 background = lightblue
-        //키 다운 color = lightpink
-
-        function 키업기능(e){
-
-            let 숫자값저장;
-
-            switch(e.key){
-                case 'a' : 숫자값저장 = 0;
-                    break;
-                case 's' : 숫자값저장 = 1;
-                    break;
-                case 'd' : 숫자값저장 = 2;
-                    break;
-                case 'f' : 숫자값저장 = 3;
-                    break;
-                default :
-                    return;
-            }
-            keys[숫자값저장].style.background = "lightpink";
-            keys[숫자값저장].style.color = "lightblue";
-        };
-        document.addEventListener("keydown",키다운기능);
-        document.addEventListener("keyup",키업기능);
-
-        //키 업 background = lightpink
-        //키 업 color = lightblue
-    </script>
+    <script src="../js/22_키입력실습.js"></script>
   </body>
 </html>
