회원가입 유효성검사

--- a/html/27_비밀번호유효성검사.html
+++ b/html/27_비밀번호유효성검사.html
@@ -30,9 +30,9 @@
             "inputId" : false,
             "inputPW" : false
         }
-        const inputName = document.querySelector("#inputPW");
+        const inputPW = document.querySelector("#inputPW");
         
-        inputName.addEventListener("input",e=>{
+        inputPW.addEventListener("input",e=>{
             //            e(input).target = 이벤트가 발생한 태그(버튼, 입력 필드 등)를 가리킴
             //            value = 이벤트가 발생한 태그의 값을 가져오기.
             const value = e.target.value;
