--- a/html/27_생년월일유효성검사.html
+++ b/html/27_생년월일유효성검사.html
@@ -18,10 +18,10 @@
     -->
     <h2>회원가입</h2>
     <form action="#" name="signupForm">
-        <h3>비밀번호</h3>
-        <input type="text" class="signup-input" id="inputPW" name="user_pw">
+        <h3>생년월일</h3>
+        <input type="text" class="signup-input" id="inputYears" name="user_years">
         <br>
-        <span class="input-result">영어,숫자 8~20 글자 사이</span>
+        <span class="input-result">YYYYMMDD 처럼 입력</span>
     </form>
     <script>
         /* 유효성 여부를 체크해두는 객체 생성*/
@@ -29,11 +29,12 @@
             "inputName" : false,
             "inputId" : false,
             "inputPW" : false,
-            
+            "inputPhone" : false,
+            "inputYears" : false
         }
-        const inputName = document.querySelector("#inputPW");
+        const inputYears = document.querySelector("#inputYears");
         
-        inputName.addEventListener("input",e=>{
+        inputYears.addEventListener("input",e=>{
             //            e(input).target = 이벤트가 발생한 태그(버튼, 입력 필드 등)를 가리킴
             //            value = 이벤트가 발생한 태그의 값을 가져오기.
             const value = e.target.value;
@@ -43,10 +44,10 @@
 
             //만약에 입력이 아무것도 안되있으면 입력x
             if(value.trim().length == 0){
-                span.textContent = "영어,숫자 8~20 글자 사이";
+                span.textContent = "YYYYMMDD 처럼 입력";
                 span.classList.remove("check","error");
                 e.target.value = "";
-                checkList["inputPW"] = false;
+                checkList["inputYears"] = false;
                 return;
             } 
             /* 한글 이름을 위한 정규식 검사 */
@@ -54,20 +55,20 @@
             // [가-힇] 모든 한글 사용 가능 
             // {2,5} 2~5글자 까지만 작성가능
             // $/ 정규식 종료
-            const 비밀번호정규식 = /^[A-Za-z0-9]{8,20}$/;
+            const yearsRegex = /^(19|20)\d{2}(0[1-9]|1[0-2])(0[1-9]|[12]\d|3[01])$/;
 
             //만약에 한글이름을 제대로 작성한 경우
             //  test = value값이 내가 원하는 대로 됐는지 테스트좀 해볼게
-            if(비밀번호정규식.test(value)){
-                span.textContent = "유효한 비밀번호입니다.";
+            if(yearsRegex.test(value)){
+                span.textContent = "유효한 생년월일입니다.";
                 span.classList.add("check");
                 span.classList.remove("error");
-                checkList["inputPW"] = true;
+                checkList["inputYears"] = true;
             } else {
-                span.textContent = "유효하지 않은 비밀번호입니다.";
+                span.textContent = "유효하지 않은 생년월일입니다.";
                 span.classList.add("error");
                 span.classList.remove("check");
-                checkList["inputPW"] = false;
+                checkList["inputYears"] = false;
             }
         });
     </script>
