--- a/html/27_휴대폰유효성검사.html
+++ b/html/27_휴대폰유효성검사.html
@@ -18,20 +18,22 @@
     -->
     <h2>회원가입</h2>
     <form action="#" name="signupForm">
-        <h3>아이디</h3>
-        <input type="text" class="signup-input" id="inputId" name="user_id">
+        <h3>휴대폰번호</h3>
+        <input type="text" class="signup-input" id="inputPhone" name="user_phone">
         <br>
-        <span class="input-result">영어,숫자 6~16 글자 사이</span>
+        <span class="input-result">000-000(0000)-0000 처럼 입력</span>
     </form>
     <script>
         /* 유효성 여부를 체크해두는 객체 생성*/
         const checkList = {
             "inputName" : false,
-            "inputId" : false
+            "inputId" : false,
+            "inputPW" : false,
+            "inputPhone" : false,
         }
-        const inputId = document.querySelector("#inputId");
+        const inputPhone = document.querySelector("#inputPhone");
         
-        inputId.addEventListener("input",e=>{
+        inputPhone.addEventListener("input",e=>{
             //            e(input).target = 이벤트가 발생한 태그(버튼, 입력 필드 등)를 가리킴
             //            value = 이벤트가 발생한 태그의 값을 가져오기.
             const value = e.target.value;
@@ -41,10 +43,10 @@
 
             //만약에 입력이 아무것도 안되있으면 입력x
             if(value.trim().length == 0){
-                span.textContent = "영어,숫자 6~16 글자 사이";
+                span.textContent = "000-000(0000)-0000 처럼 입력";
                 span.classList.remove("check","error");
                 e.target.value = "";
-                checkList["inputId"] = false;
+                checkList["inputPhone"] = false;
                 return;
             } 
             /* 한글 이름을 위한 정규식 검사 */
@@ -52,20 +54,20 @@
             // [가-힇] 모든 한글 사용 가능 
             // {2,5} 2~5글자 까지만 작성가능
             // $/ 정규식 종료
-            const 아이디정규식 = /^[A-Za-z0-9]{8,20}$/;
+            const phoneRegex = /^\d-{3}-\d{3,4}-\d{4}$/;
 
             //만약에 한글이름을 제대로 작성한 경우
             //  test = value값이 내가 원하는 대로 됐는지 테스트좀 해볼게
-            if(아이디정규식.test(value)){
-                span.textContent = "유효한 아이디 형식입니다.";
+            if(phoneRegex.test(value)){
+                span.textContent = "유효한 휴대폰번호입니다.";
                 span.classList.add("check");
                 span.classList.remove("error");
-                checkList["inputId"] = true;
+                checkList["inputPhone"] = true;
             } else {
-                span.textContent = "유효하지 않은 아이디 형식입니다.";
+                span.textContent = "유효하지 않은 휴대폰번호입니다.";
                 span.classList.add("error");
                 span.classList.remove("check");
-                checkList["inputId"] = false;
+                checkList["inputPhone"] = false;
             }
         });
     </script>
