--- a/jQuery/15_검색하기실습.html
+++ b/jQuery/15_검색하기실습.html
@@ -43,8 +43,12 @@
             $("#검색박스").keyup(function(){
                 const 검색박스 = $(this).val();
                 var 검색결과확인 = false;
-                $("li").each(function(){
+                
+                $("#옷리스트 li").each(function(){
                     var 텍스트 = $(this).text();
+                    console.log("**************************");
+                    console.log(텍스트); //자바에서 System.out.print 같은 존재
+
                     if(텍스트.indexOf(검색박스) === -1){
                         $(this).hide();
                         
