--- a/bootstrap/04_게시판.html
+++ b/bootstrap/04_게시판.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>이미지 갤러리</title>
+    <title>부트스트랩 홈페이지</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         .footer{
@@ -43,57 +43,41 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
-        <div class="row mt-4">
-            <h1>이미지 갤러리</h1>
+    <div class="container mt-5">
+        <h2>게시판</h2>
+        <div class="mb-3 d-flex justify-content-end">
+            <button class="btn btn-primary">새 글 작성</button>
         </div>
-        <!-- 첫 번째 가로줄 힐링이 자기소개 -->
-        <div class="row mt-5">
-            <div class="col-4">
-                <img src="healing.jpg" class="img-fluid img-thumbnail">
-            </div>
-            <div class="col-8">
-                <h3>힐링이</h3>
-                <p>
-                    중성<br>
-                    츄르를 좋아합니다.
-                </p>
-            </div>
-        </div>
-        <!-- row 가로 3번째 줄 호감이 자기소개 시간 -->
-        <div class="row mt-5">
-            <div class="col-4">
-                <h3>호감이</h3>
-                <p>래브라도 리트리버 <br>
-                    물을 싫어합니다.
-                </p>
-            </div>
-            <div class="col-8">
-                <img src="hogam.jpg" class="img-fluid rounded">
-            </div>
-        </div>
-        <!-- row 세번째줄 말리 자랑하기 자기소개-->
-        <div class="row mt-5">
-            <div class="col-2">
-                <img src="marley.jpg" class="img-fluid rounded-circle">
-            </div>
-            <div class="col-2">
-                <h3>말리</h3>
-                <p>
-                    말리는 5월 23일 생일이다.<br>
-                    산책을 좋아합니다.
-                </p>
-            </div>
-            <div class="col-2">
-                <img src="lovelyMarley.jpg" class="img-fluid rounded-pill">
-            </div>
-            <div class="col-2">
-                <img src="pajamaMarley.jpg" class="img-fluid rounded">
-            </div>
-            <div class="col-2">
-                <img src="swimmingPartyMarley.jpg" class="img-fluid rounded-circle">
-            </div>
-        </div>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>제목</th>
+                    <th>작성자</th>
+                    <th>날짜</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>1</th>
+                    <td>첫 번째 게시글</td>
+                    <td>홍길동</td>
+                    <td>2024-05-01</td>
+                </tr>
+                <tr>
+                    <th>2</th>
+                    <td>두 번째 게시글</td>
+                    <td>김철수</td>
+                    <td>2024-05-02</td>
+                </tr>
+                <tr>
+                    <th>3</th>
+                    <td>세 번째 게시글</td>
+                    <td>오영희</td>
+                    <td>2024-05-03</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     <!-- 푸터 -->
     <footer class="footer mt-5">
